--- a/Mars Project file.ipynb
+++ b/Mars Project file.ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'Python 3.12.4' requires the ipykernel package.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: '\"c:/Users/Ishaan Janjuha/Python312/python.exe\" -m pip install ipykernel -U --user --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
     "import zipfile\n",
     "import os\n",
@@ -2539,7 +2550,7 @@
     "\n",
     "class_names = list(labels_df.filter(like='Class').columns)\n",
     "num_classes = len(class_names)\n",
-    "\n",
+    "output_data=[]\n",
     "for i in range(min(2000, len(test_image_files))):\n",
     "    image_file = test_image_files[i]\n",
     "    predicted_label = class_names[predicted_classes[i]]\n",
@@ -2551,7 +2562,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "output_df = pd.DataFrame(output_data, columns=['File Name', 'Predicted Class'])\n",
+    "output_df.to_csv('MartianMavericks_submission.csv', index=False)\n",
+    "print(\"Predictions saved to predictions.csv\")"
+   ]
   }
  ],
  "metadata": {
