--- a/Mars Project file.ipynb
+++ b/Mars Project file.ipynb
@@ -2565,7 +2565,7 @@
    "source": [
     "output_df = pd.DataFrame(output_data, columns=['File Name', 'Predicted Class'])\n",
     "output_df.to_csv('MartianMavericks_submission.csv', index=False)\n",
-    "print(\"Predictions saved to predictions.csv\")"
+    "print(\"Predictions saved to MartianMavericks_submission.csv\")"
    ]
   }
  ],
